<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".Main3Activity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="8sp"
        android:text="@string/busca"
        android:textColor="#FF2222"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:text="@string/busca" />

    <Button
        android:id="@+id/button_prox2"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:background="#FFEB3B"
        android:drawableStart="@drawable/location"
        android:text="@string/proximoamim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/button2"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:background="#FFEB3B"
        android:drawableStart="@drawable/restaurant"
        android:text="@string/por_localidade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/button3"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:background="#FFEB3B"
        android:drawableStart="@drawable/favorite"
        android:text="@string/favoritos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <Button
        android:id="@+id/button4"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:background="#FFEB3B"
        android:drawableStart="@drawable/ttt"
        android:text="@string/ocupacao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="70dp"
        android:layout_height="105dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>