<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107">

    <Button
        android:id="@+id/button5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/help"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <Button
        android:id="@+id/button6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/home"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989"
        tools:text="   " />

    <Button
        android:id="@+id/button4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/food"
        android:text="@string/food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        tools:text="   " />

    <Button
        android:id="@+id/button2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/user"
        android:text="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        tools:text="   " />

    <EditText
        android:id="@+id/editText"
        android:layout_width="395dp"
        android:layout_height="62dp"
        android:background="@drawable/searchbox"
        android:ems="10"
        android:hint="@string/pesquisar_estabelecimento"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="625dp"
        android:layout_height="575dp"
        android:src="@drawable/logoextenso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />


</androidx.constraintlayout.widget.ConstraintLayout>