<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".Main4Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="101dp"
        android:contentDescription="@string/prox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/location" />

    <TextView
        android:id="@+id/prox"
        android:layout_width="197dp"
        android:layout_height="58dp"
        android:alpha="@dimen/fab_margin"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="8sp"
        android:text="@string/proximos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF0000"
        android:textSize="42sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        tools:text="Próximos" />

    <Button
        android:id="@+id/button"
        android:layout_width="399dp"
        android:layout_height="99dp"
        android:background="?android:attr/colorPressedHighlight"
        android:drawableStart="@drawable/beer"
        android:drawableLeft="@drawable/beer"
        android:drawingCacheQuality="auto"
        android:duplicateParentState="false"
        android:text="@string/botao_beer"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <Button
        android:id="@+id/button8"
        android:layout_width="399dp"
        android:layout_height="99dp"
        android:background="?android:attr/colorPressedHighlight"
        android:drawableStart="@drawable/restaurant"
        android:text="@string/botao_restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

</androidx.constraintlayout.widget.ConstraintLayout>