<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPressedHighlight"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="411dp"
        android:layout_height="142dp"
        android:layout_marginTop="170dp"
        android:background="@color/material_on_background_disabled"
        android:drawableStart="@drawable/location"
        android:drawableLeft="@drawable/location"
        android:drawingCacheQuality="auto"
        android:foregroundGravity="left|fill_vertical"
        android:text="@string/proximoamim"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="409dp"
        android:layout_height="145dp"
        android:background="@color/material_on_background_disabled"
        android:drawableStart="@drawable/food"
        android:text="@string/por_localidade"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.444"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="409dp"
        android:layout_height="145dp"
        android:background="@color/material_on_background_disabled"
        android:drawableStart="@drawable/star"
        android:text="@string/favoritos"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.679"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="409dp"
        android:layout_height="145dp"
        android:background="@color/material_on_background_disabled"
        android:drawableStart="@drawable/ttt"
        android:text="@string/ocupacao"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="36sp"
        app:layout_constrainedHeight="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.913"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/buscador"
        android:layout_width="166dp"
        android:layout_height="111dp"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:text="@string/busca"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_on_secondary"
        android:textScaleX="?android:attr/windowTitleSize"
        android:textSize="50sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

</androidx.constraintlayout.widget.ConstraintLayout>
